# rmail

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
src/: cli.rs  main.rs  read.rs  send.rs
