[package]
name = "rmail"
version = "0.1.0"
authors=["baribari2"]
edition = "2021"
license="MIT"
readme="README.md"
repository="github.com/baribari2/rmail"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
imap = { version = "2.4.1", features = ["native-tls"] }
native-tls = "0.2"
tokio = { version = "1", features = ["full"] }
lettre = "0.10"
anyhow = "1.0.69"
spinners = "4.1.0"
mail-parser = "0.8.1"
